--- a/SieveOfEratosthenes/Base.lproj/Main.storyboard
+++ b/SieveOfEratosthenes/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SEViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +15,114 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9I5-qX-BNG">
+                                <rect key="frame" x="0.0" y="80" width="600" height="520"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="Deu-zL-Ns9">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="kNumberCell" id="MVO-jU-kTk" customClass="SENumberCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1111" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AXQ-Ox-Rcb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <outlet property="numberLabel" destination="AXQ-Ox-Rcb" id="Ph8-XU-bgI"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="xUV-O5-7L8"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Krd-nF-ld8"/>
+                                </connections>
+                            </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EPW-Bo-4xe">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="boundary" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lde-9a-oFF">
+                                        <rect key="frame" x="226" y="25" width="150" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="0P1-EM-4Rg"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ckI-OF-9xM">
+                                        <rect key="frame" x="414" y="23" width="47" height="35"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                        <state key="normal" title="RUN!">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="runButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vih-8k-Iwl"/>
+                                        </connections>
+                                    </button>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="SwW-51-Egx">
+                                        <rect key="frame" x="419" y="21" width="37" height="37"/>
+                                    </activityIndicatorView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jOP-bT-acG">
+                                        <rect key="frame" x="19" y="25" width="50" height="30"/>
+                                        <state key="normal" title="HIstory">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="disabled">
+                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="historyButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OBk-MX-AbT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="Lde-9a-oFF" secondAttribute="centerX" constant="-0.5" id="4ep-sm-inS"/>
+                                    <constraint firstItem="ckI-OF-9xM" firstAttribute="centerY" secondItem="Lde-9a-oFF" secondAttribute="centerY" id="BFF-kb-JoL"/>
+                                    <constraint firstItem="ckI-OF-9xM" firstAttribute="leading" secondItem="Lde-9a-oFF" secondAttribute="trailing" constant="38" id="Oq2-N9-7qW"/>
+                                    <constraint firstItem="SwW-51-Egx" firstAttribute="centerY" secondItem="ckI-OF-9xM" secondAttribute="centerY" constant="-1" id="dlv-dS-b8g"/>
+                                    <constraint firstAttribute="centerY" secondItem="Lde-9a-oFF" secondAttribute="centerY" id="ieA-kd-1rR"/>
+                                    <constraint firstItem="SwW-51-Egx" firstAttribute="centerX" secondItem="ckI-OF-9xM" secondAttribute="centerX" id="k6Z-0k-fd3"/>
+                                    <constraint firstAttribute="centerY" secondItem="jOP-bT-acG" secondAttribute="centerY" id="tJS-pd-FNt"/>
+                                    <constraint firstAttribute="height" constant="80" id="w16-db-zSZ"/>
+                                    <constraint firstItem="jOP-bT-acG" firstAttribute="leading" secondItem="EPW-Bo-4xe" secondAttribute="leading" constant="19" id="ygB-k3-QQj"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="EPW-Bo-4xe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="0XZ-jj-IEI"/>
+                            <constraint firstItem="9I5-qX-BNG" firstAttribute="top" secondItem="EPW-Bo-4xe" secondAttribute="bottom" id="13F-9o-5i7"/>
+                            <constraint firstAttribute="trailing" secondItem="9I5-qX-BNG" secondAttribute="trailing" id="4hR-5k-nHs"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9I5-qX-BNG" secondAttribute="bottom" id="65d-Jf-biw"/>
+                            <constraint firstItem="EPW-Bo-4xe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EN6-UE-xk6"/>
+                            <constraint firstAttribute="trailing" secondItem="EPW-Bo-4xe" secondAttribute="trailing" id="ex1-Tj-x1J"/>
+                            <constraint firstItem="9I5-qX-BNG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="iKw-MJ-feH"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="SwW-51-Egx" id="Ssf-B6-MOw"/>
+                        <outlet property="boundaryTextField" destination="Lde-9a-oFF" id="jup-xk-WSa"/>
+                        <outlet property="collectionView" destination="9I5-qX-BNG" id="qvZ-pM-KGZ"/>
+                        <outlet property="historyButton" destination="jOP-bT-acG" id="MJM-TP-Xwy"/>
+                        <outlet property="runButton" destination="ckI-OF-9xM" id="3NO-Ur-HtO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
